--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "web": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "ios": "react-native run-ios",
-    "android": "react-native run-android",
     "test": "jest --coverage",
     "lint": "tslint -c tslint.json 'src/**/*.ts{,x}'",
-    "rebuild": "rm -rf ios; rm -rf android; react-native upgrade; rm -f .babelrc; rm -f .buckconfig; rm -f .flowconfig; rm -f .watchmanconfig; rm -f .gitattributes;"
+    "rebuild": "rm -rf ios; rm -rf android; react-native upgrade; rm -f .babelrc; rm -f .buckconfig; rm -f .flowconfig; rm -f .watchmanconfig; rm -f .gitattributes;",
+    "prettier": "prettier --config \"./.prettierrc\" --write \"./src/**/*.{ts,tsx,js,jsx,css,json}\"",
+    "android-clean": "cd android & gradlew clean & cd .. ",
+    "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "android-shake": "adb shell input keyevent 82",
+    "adb": "adb devices",
+    "android-emulator": "c:/users/john/appdata/local/android/sdk/tool/emulator.exe",
+    "dev": "npm run android-clean && npm run android",
+    "ngrok": "ngrokStart.bat"
   },
   "dependencies": {
     "react": "^16.4.0",
@@ -26,7 +33,7 @@
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.1.0",
-    "prettier": "^1.13.4",
+    "prettier": "^1.13.5",
     "react-art": "^16.4.0",
     "react-native-typescript-transformer": "^1.2.9",
     "react-test-renderer": "^16.4.0",
@@ -34,7 +41,9 @@
     "typescript": "^2.9.1"
   },
   "babel": {
-    "presets": ["react-native"]
+    "presets": [
+      "react-native"
+    ]
   },
   "jest": {
     "preset": "react-native",
